--- a/Corporate_Advisory.html
+++ b/Corporate_Advisory.html
@@ -16,9 +16,9 @@
             <a href="imhere.html" class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
         </div>
     </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">Corporate Advisory Services</h3><br><br>
+        <h3 class="toptitle tc ">Corporate Advisory Services</h3>
         <div class="container-fluid cc">
             <div class="banner"></div>
         </div>
@@ -96,15 +96,19 @@
                 </tbody>
               </table>
               </div>
-              <br>
-              <ul>
-                <li>1</li>
+</div>
+</section>
+<section class="bggray">
+    <div class="container areain">
+              <ul class="noul2">
                 <li>Approach : <span>In our corporate advisory services we are experts in structuring and thorough knowledge of domestic and international markets empowers us to offer highly customized corporate advisory services. Since 2005 in our corporate advisory firm, we have helped raise over Rs. 5000 crores (US$1.1bn) through equity instruments for over 30 corporates. An excellent rapport with numerous institutional investors and corporate houses enables us to procure the right profile of strategic and financial partners to our clients.</span> </li>
-            </ul>
-            <ul>
-                <li>2</li>
                 <li>Team : <span>Our corporate advisory team comprises of multi-skilled professionals who bring to the table their varied experience from diverse backgrounds. Our expertise in structuring and our knowledge of domestic and international markets has enabled us to create a niche for ourselves in the area of Corporate Advisory.</span> </li>
+
             </ul>
+            </div>
+            </section>
+            <section class="">
+                <div class="container areain">
             <br>
             <p class="tpara1">
                 For more information on PL's Corporate Advisory services, contact :
