--- a/third_party_investment_advisory.html
+++ b/third_party_investment_advisory.html
@@ -19,16 +19,16 @@
             <a href="imhere.html" class="backlink ">I Am Here To Section</a>
         </div>
     </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">third party investment advisory
+        <h3 class="toptitle tc ud1">third party investment advisory
 
 
-</h3><br><br><br>
+</h3>
         <div class="container-fluid cc">
             <div class="banner"></div>
         </div>
-        <div class="container allul areain">
+        <div class="container  areain">
             <!-- <h3 class="stitle mt0 mb20">Technical and Derivatives</h3> -->
             
 
